--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
   <section class="about mb">
     <div class="container">
       <div class="row">
-        <div class="col-lg-6 col-md-6 col-12">
+        <div class="col-lg-6 col-md-12 col-12">
           <div class="abt-text">
             <h2 style="text-align: left;">About Us</h2>
             <p>
@@ -104,7 +104,7 @@
           </div>
         </div>
         <div class="col-lg-1 col-md-1 col-0"></div>
-        <div class="col-lg-5 col-md-5 col-12">
+        <div class="col-lg-5 col-md-12 col-12">
           <div class="abt-img">
             <img src="assets/img/about-img.webp" alt="The George Telegraph Training Institute" class="img-fluid">
           </div>
@@ -118,12 +118,12 @@
       <h2>Training Partners</h2>
       <div class="text-center">
         <div class="row">
-          <div class="col-lg-6 col-md-5 col-12">
+          <div class="col-lg-6 col-md-6 col-12">
             <div class="t-img border-right">
               <img src="assets/img/NSDC1.png" alt="" class="img-fluid">
             </div>
           </div>
-          <div class="col-lg-6 col-md-5 col-12">
+          <div class="col-lg-6 col-md-6 col-12">
             <div class="t-img">
               <img src="assets/img/Skill-India.png" alt="" class="img-fluid">
             </div>
@@ -207,7 +207,7 @@
         </div>
         <div id="tab01" class="tab-contents">
           <div class="row">
-            <div class="col-lg-6 col-md-6 col-12">
+            <div class="col-lg-6 col-md-12 col-12">
               <h3>Heritage Scheme for Full ATC</h3>
               <p>The George Telegraph Training Institute started franchisee operations in the year 1997. Since then this
                 Institute went ahead to open franchisee training centres i.e. Authorized Training Centres (ATCs) in
@@ -226,7 +226,7 @@
                     Application Details and Form</button></a>
               </div>
             </div>
-            <div class="col-lg-6 col-md-6 col-12">
+            <div class="col-lg-6 col-md-12 col-12">
               <div class="tab-img mt-4">
                 <img src="assets/img/house.webp" alt="" class="img-fluid">
               </div>
@@ -243,7 +243,7 @@
             the nation's youth by way of providing cutting-edge teaching and training through exclusive and in sync
             vocational courses. We are offering the most top-notch professional beautician training course.</p>
           <div class="row">
-            <div class="col-lg-6 col-md-6 col-12">
+            <div class="col-lg-6 col-md-12 col-12">
               <h3>The Advantages of Beauty & Wellness Franchisee</h3>
               <ul>
                 <li>Beauty & wellness training is "in" right now. By investing in a training centre that trains future
@@ -267,7 +267,7 @@
                     Application Details and Form</button></a>
               </div>
             </div>
-            <div class="col-lg-6 col-md-6 col-12">
+            <div class="col-lg-6 col-md-12 col-12">
               <div class="tab-img mt-4">
                 <img src="assets/img/beauty.jpg" alt="" class="img-fluid">
               </div>
@@ -287,7 +287,7 @@
             production, and operation of vehicles. This field is not limited to just cars; it extends to buses and
             trucks as well.</p>
           <div class="row">
-            <div class="col-lg-6 col-md-6 col-12">
+            <div class="col-lg-6 col-md-12 col-12">
               <h3>The Advantages of Franchisee for Automobile Engineering</h3>
               <ul>
                 <li>In India, there are several potential career opportunities in automobile engineering. It is among
@@ -315,7 +315,7 @@
                     Application Details and Form</button></a>
               </div>
             </div>
-            <div class="col-lg-6 col-md-6 col-12">
+            <div class="col-lg-6 col-md-12 col-12">
               <div class="tab-img mt-4">
                 <img src="assets/img/gtiae.jpg" alt="" class="img-fluid">
               </div>
@@ -334,7 +334,7 @@
             Skill Development Corporation (NSDC), a Government of India Project, making us their Training Partner and
             affiliating all the courses run by GTTI.</p>
           <div class="row">
-            <div class="col-lg-6 col-md-6 col-12">
+            <div class="col-lg-6 col-md-12 col-12">
               <h3>The Advantage of Smart Centre</h3>
               <ul>
                 <li>Low Investment – Formation of a Smart Centre involves nominal funds. </li>
@@ -354,7 +354,7 @@
                     Application Details and Form</button></a>
               </div>
             </div>
-            <div class="col-lg-6 col-md-6 col-12">
+            <div class="col-lg-6 col-md-12 col-12">
               <div class="tab-img mt-4">
                 <img src="assets/img/smart-center.jpg" alt="" class="img-fluid">
               </div>
@@ -540,7 +540,7 @@
           </div>
         </div>
       </div>
-      <p><b>*Terms and conditions : Some specific courses are affiliated</b></p>
+      <p class="mt-3"><b>*Terms and conditions : Some specific courses are affiliated</b></p>
     </div>
   </section>
 
