--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
         <img src="assets/img/logo.jpg" alt="" width="200px">
         <h1 id="bus">New business opportunity  </h1>
         <h3 id="star">for you</h3>
-        <div class="mt-4">
-          <button class="btn btn-warning" data-bs-toggle="modal" data-bs-target="#exampleModal">Join us <img
+        <div class="">
+          <button class="btn btn-warning vfy" data-bs-toggle="modal" data-bs-target="#exampleModal">Join us <img
               src="assets/img/Arrow.png" alt="" width="50px"></button>
         </div>
       </div>
