--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <title>GTTI Franchise</title>
+  <title>George Telegraph is Looking for Franchise Owners</title>
+  <meta name="description"
+    content="The George Telegraph Training Institute has been empowering youth with top-notch vocational training. Be our franchise for a successful journey">
   <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
   <link rel="icon" type="image/png" href="./assets/img/favicon.ico">
