--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
                 <h3><b>Why Us?</b></h3>
                 <ul>
                   <li>105 years of Training Experience.</li>
-                  <li>Iso 9001:2015 certified</li>
+                  <li>ISO 9001:2015 certified</li>
                   <li>70+ Centres , 80+ courses.</li>
                   <li>Job ready courses for students</li>
                 </ul>
